# Text-Buffer

./: .gitignore  CMakeLists.txt  README.md  initialize.sh
cmake/scripts/: gtest.cmake  target_unit_test.cmake
cmake/toolchain/: clang-linux-x86_64.toolchain.cmake
include/: coordinate.hpp
include/text/: buffer.hpp  coordinate.hpp  position.hpp
include/utils/: err.hpp  ex.hpp  exception.hpp
src/: CMakeLists.txt  coordinate.cpp  position.cpp  text-buffer.cpp
tests/: CMakeLists.txt  coordinate.test.cpp  position.test.cpp
tests/operator-tests/: coordinate-arithmetic.test.cpp
tests/operator-tests/comparison/: coordinate-EQ.test.cpp  coordinate-GE.test.cpp  coordinate-GT.test.cpp  coordinate-LE.test.cpp  coordinate-LT.test.cpp  coordinate-NE.test.cpp
tests/test-object/: comparison-test-case.hpp
